// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RawConfigOps Cloud Tests exportRawConfig() 1: Export raw config am 1`] = `
{
  "_id": "a605506774a848f7877b4d17a453bd39-1",
  "_rev": "-1063514607",
  "description": "Checks if the user has a current session.",
  "displayName": "Has Session - TEST",
  "errorOutcome": false,
  "inputs": [],
  "outcomes": [
    "True",
    "False",
  ],
  "outputs": [],
  "properties": {},
  "script": "var SCRIPT_OUTCOMES = {
    TRUE: 'True',
    FALSE: 'False'
}

function main() {
    action.goTo(typeof existingSession === "undefined" ? SCRIPT_OUTCOMES.FALSE : SCRIPT_OUTCOMES.TRUE);
}

main();
",
  "serviceName": "a605506774a848f7877b4d17a453bd39",
  "tags": [
    "utilities",
  ],
  "version": 1,
}
`;

exports[`RawConfigOps Cloud Tests exportRawConfig() 2: Export raw config openidm 1`] = `
{
  "_id": "emailTemplate/FrodoTestEmailTemplate1",
  "defaultLocale": "en",
  "displayName": "Frodo Test Email Template One",
  "enabled": true,
  "from": "",
  "message": {
    "en": "<h3>Click to reset your password</h3><h4><a href="{{object.resumeURI}}">Password reset link</a></h4>",
    "fr": "<h3>Cliquez pour réinitialiser votre mot de passe</h3><h4><a href="{{object.resumeURI}}">Mot de passe lien de réinitialisation</a></h4>",
  },
  "mimeType": "text/html",
  "subject": {
    "en": "Reset your password",
    "fr": "Réinitialisez votre mot de passe",
  },
}
`;

exports[`RawConfigOps Cloud Tests exportRawConfig() 3: Export raw config environment 1`] = `
{
  "_id": "esv-frodo-test-variable-1",
  "description": "description1",
  "expressionType": "string",
  "lastChangeDate": "2026-05-12T16:25:11.016034Z",
  "lastChangedBy": "Frodo-SA-1758728043147",
  "loaded": false,
  "valueBase64": "dmFsdWUx",
}
`;

exports[`RawConfigOps Cloud Tests importRawConfig() 1: importRawConfig am 1`] = `
{
  "_id": "aaaa3fb2f5dc42dd9772bedc93898bd8-1",
  "_rev": "-1203317137",
  "description": "Debug node that displays the shared and transient state of the journey for debugging purposes.",
  "displayName": "Display State - TEST",
  "errorOutcome": false,
  "inputs": [],
  "outcomes": [
    "outcome",
  ],
  "outputs": [],
  "properties": {
    "displayFormat": {
      "defaultValue": "TABLE",
      "description": "The format in which to display the states.",
      "multivalued": false,
      "options": {
        "JSON": "Raw JSON",
        "TABLE": "HTML Table",
      },
      "required": true,
      "title": "Display Format",
      "type": "STRING",
    },
  },
  "script": "var SCRIPT_OUTCOMES = {
  OUTCOME: "outcome"
};

function main() {
    if (!callbacks.isEmpty()) {
        action.goTo(SCRIPT_OUTCOMES.OUTCOME);
        return;
    }
    var keySet = nodeState.keys(); // Java Set<String>
    var keys = Array.from(keySet); // Make it into JavaScript array
    debugState = {};
    for (var i in keys) {
        var k = new String(keys[i]);
        var item = nodeState.get(k);
        if (typeof item === "object") {
            debugState[k] = nodeState.getObject(k);
        } else {
            debugState[k] = nodeState.get(k);
        }
    }
    if (properties.displayFormat === "JSON") {
        callbacksBuilder.textOutputCallback(0, \`<pre style="text-align: left;">\${JSON.stringify(debugState, null, 2)}</pre>\`);
        return;
    }
    callbacksBuilder.textOutputCallback(0, \`<table><tr><td style="border: 1px solid black;">Key</td><td style="border: 1px solid black;">Value</td></tr>\${Array.from(Object.keys(debugState).map(k => \`<tr><td style="border: 1px solid black;"><pre style="text-align: left;">\${k}</pre></td><td style="border: 1px solid black;"><pre style="text-align: left;">\${debugState[k]}</pre></td></tr>\`))}</table>\`);
}

main();
",
  "serviceName": "aaaa3fb2f5dc42dd9772bedc93898bd8",
  "tags": [
    "debug",
    "testing",
  ],
  "version": 1,
}
`;

exports[`RawConfigOps Cloud Tests importRawConfig() 2: importRawConfig openidm 1`] = `
{
  "_id": "FrodoTestEmailTemplate2",
  "defaultLocale": "en",
  "displayName": "Frodo Test Email Template Two",
  "enabled": true,
  "from": "",
  "message": {
    "en": "<h3>This is your one-time password:</h3><h4>{{object.description}}</a></h4>",
  },
  "mimeType": "text/html",
  "subject": {
    "en": "One-Time Password for login",
  },
}
`;

exports[`RawConfigOps Cloud Tests importRawConfig() 3: importRawConfig environment 1`] = `
{
  "_id": "esv-frodo-test-variable-2",
  "description": "description2",
  "expressionType": "int",
  "lastChangeDate": "2026-05-12T16:25:13.977269Z",
  "lastChangedBy": "Frodo-SA-1758728043147",
  "loaded": false,
  "valueBase64": "NDI=",
}
`;

exports[`RawConfigOps IGA Tests exportRawConfig() 4: Export raw config iga 1`] = `
{
  "_rev": 1,
  "custom": true,
  "displayName": "test_request_type_1",
  "id": "5f80166a-d551-47f2-8110-8bc0e093d2cc",
  "metadata": {
    "createdDate": "2026-09-14T21:52:03.229577192Z",
    "modifiedDate": "2026-09-14T21:52:03.229580192Z",
  },
  "schemas": {
    "common": [
      {
        "_meta": {
          "displayName": "commonRequest",
          "properties": {
            "blob": {
              "isInternal": true,
              "isRequired": false,
            },
            "context": {
              "display": {
                "description": "The context of the request",
                "isVisible": true,
                "name": "Context",
                "order": 1,
              },
              "isInternal": true,
              "isMultiValue": false,
              "isRequired": false,
            },
            "endDate": {
              "display": {
                "description": "End date of the grant",
                "isVisible": true,
                "name": "End date",
                "order": 8,
              },
              "isInternal": true,
              "isRequired": false,
            },
            "expiryDate": {
              "display": {
                "description": "User provided date on which the request will cancel",
                "isVisible": true,
                "name": "Request expiration date",
                "order": 7,
              },
              "isInternal": true,
              "isRequired": false,
            },
            "externalRequestId": {
              "display": {
                "description": "The external ID for the request",
                "isVisible": true,
                "name": "External Request ID",
                "order": 4,
              },
              "isChangable": false,
              "isInternal": true,
              "isRequired": false,
            },
            "isDraft": {
              "isInternal": true,
              "isRequired": false,
            },
            "justification": {
              "display": {
                "description": "The reason for the request",
                "isVisible": true,
                "name": "Justification",
                "order": 3,
              },
              "isInternal": true,
              "isRequired": false,
            },
            "priority": {
              "display": {
                "description": "The priority of the reqeust",
                "isVisible": true,
                "name": "Priority",
                "order": 6,
              },
              "isRequired": false,
              "text": {
                "defaultValue": "low",
              },
            },
            "requestIdPrefix": {
              "display": {
                "description": "Prefix for the request ID",
                "isVisible": true,
                "name": "Request ID prefix",
                "order": 5,
              },
              "isInternal": true,
              "isRequired": false,
            },
            "startDate": {
              "display": {
                "description": "Start date of the grant",
                "isVisible": true,
                "name": "Start date",
                "order": 8,
              },
              "isInternal": true,
              "isRequired": false,
            },
            "workflowId": {
              "display": {
                "description": "The ID key of the BPMN workflow",
                "isVisible": true,
                "name": "BPMN workflow ID",
                "order": 7,
              },
              "isChangable": false,
              "isInternal": true,
              "isRequired": false,
            },
          },
          "type": "system",
        },
        "properties": {
          "blob": {
            "type": "object",
          },
          "context": {
            "type": "object",
          },
          "endDate": {
            "type": "text",
          },
          "expiryDate": {
            "type": "text",
          },
          "externalRequestId": {
            "type": "text",
          },
          "isDraft": {
            "type": "boolean",
          },
          "justification": {
            "type": "text",
          },
          "priority": {
            "type": "text",
          },
          "requestIdPrefix": {
            "type": "text",
          },
          "startDate": {
            "type": "text",
          },
          "workflowId": {
            "type": "text",
          },
        },
      },
    ],
  },
  "workflow": {},
}
`;

exports[`RawConfigOps IGA Tests importRawConfig() 4: importRawConfig iga 1`] = `
{
  "_rev": 32,
  "custom": null,
  "customValidation": null,
  "displayName": "Create Entitlement",
  "id": "createEntitlement",
  "notModifiableProperties": [
    "entitlement.applicationId",
    "entitlement.objectType",
  ],
  "schemas": {
    "common": [
      "/requestSchema/iga/commonRequest",
    ],
    "entitlement": [
      "/requestSchema/iga/createEntitlement",
    ],
  },
  "validation": {
    "source": "var validation = {"errors" : [], "comments" : []};if(object.requester.id.startsWith("managed/user/")){var userId = object.requester.id.split('/');try{var application = openidm.action("iga/governance/application/" + request.entitlement.applicationId, 'GET', {}, {"endUserId": userId[2]});if(!application.permissions.createEntitlement){validation.errors.push("User does not have permission to create this entitlement.");}}catch(e){validation.errors.push("User does not have permission to create this entitlement.")}}if(systemSettings.settings.requireRequestJustification === true && (request.common.justification == undefined || request.common.justification.trim() == "")){validation.errors.push("Justification is required");}validation;",
  },
  "workflow": {
    "id": "CreateEntitlement",
    "type": "bpmn",
  },
}
`;
